Cambie la cabecera maestra y el color de texto azul junto con un nuevo parrafo de suscribete

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    color:#333;
+    color:rgb(49, 195, 231);
     text-align: left;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
