--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     color:#333;
     text-align: left;
     font-family: 'Roboto', sans-serif;
@@ -8,12 +9,17 @@ body{
 }
 
 #cabecera{
-    background: #33A;
-    box-shadow: 0px 5px 30px 0px rgba(0, 1, 9, 0.20);
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: #ffffff;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em ; 
+}
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline{
@@ -23,9 +29,8 @@ body{
 }
 
 #container{
-    box-shadow: 0px 5px 30px 0px rgba(0, 1, 10, 0.30);
-    width:70%;
-    padding:1em;
+    width: 70%;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -36,5 +41,6 @@ body{
 }
 
 #post{
+    background: #ffffff;
     padding: 1em;
 }
