--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,11 @@ body{
 #post{
     padding: 1em;
 }
+
+#footer{
+    background: #777777;
+    color: #ffffff;
+    text-align: center;
+    padding: 0.5em;
+    border-radius: 0 0 0.5em .5em;
+}
