--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body{
 }
 
 #footer{
-    background: #777777;
+    background: #37488b;
     color: #ffffff;
     text-align: center;
     padding: 0.5em;
